--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\GiovaniRaci\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
+user.properties.file=C:\\Documents and Settings\\11242\\Dados de aplicativos\\NetBeans\\7.3.1\\build.properties
